[gd_scene load_steps=4 format=3 uid="uid://d3bkn67urr6fv"]

[ext_resource type="Script" uid="uid://dgrrqth0fyq3p" path="res://scripts/Menu/waiting_room_player.gd" id="1_6apyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6apyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dikd"]
bg_color = Color(1, 1, 1, 1)

[node name="WaitingRoomPlayer" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.067
anchor_right = 0.05
anchor_bottom = 0.067
offset_left = -75.0
offset_top = -100.5
offset_right = 35.0
offset_bottom = 22.5
script = ExtResource("1_6apyc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6apyc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerName" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "{{player_name}}"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TokenPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 130)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_4dikd")

[node name="PlayerToken" type="Sprite2D" parent="PanelContainer/VBoxContainer/TokenPanel"]
position = Vector2(61, 68)
